--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^2.18.8",
+    "bootstrap": "^4.4.1",
+    "gatsby": "^2.18.10",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "reactstrap": "^8.2.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
