--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "bootstrap": "^4.4.1",
     "gatsby": "^2.18.10",
+    "gatsby-background-image": "^0.9.12",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "reactstrap": "^8.2.0"
